tests/ui/imports/issue-109148.stderr
error: macro-expanded `extern crate` items cannot shadow names passed with `--extern`
  --> $DIR/issue-109148.rs:6:9
   |
LL |         extern crate core as std;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | m!();
   | ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0659]: `std` is ambiguous
  --> $DIR/issue-109148.rs:13:5
   |
LL | use std::mem;
   |     ^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
   = note: `std` could refer to a built-in crate
note: `std` could also refer to the crate imported here
  --> $DIR/issue-109148.rs:6:9
   |
LL |         extern crate core as std;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | m!();
   | ---- in this macro invocation
   = help: use `crate::std` to refer to this crate unambiguously
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0659]: `std` is ambiguous
  --> $DIR/issue-109148.rs:14:7
   |
LL | use ::std::mem as _;
   |       ^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
   = note: `std` could refer to a built-in crate
note: `std` could also refer to the crate imported here
  --> $DIR/issue-109148.rs:6:9
   |
LL |         extern crate core as std;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | m!();
   | ---- in this macro invocation
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0659`.
